@@ -1,5 +1,6 @@
 next
 ----
+-split_fasta: corrected problem with duplicates in the output list
 -genemark-es: new component
 -tmhmm2bsml: changed Seq-data-import[@id] value to ensure id does not start with numbers.
 -genbank2bsml: Changing Feature/Attribute@name="gene_symbol" instead of "gene" to agree with gff2bsml and prok pipeline
